--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Steering\AntiAlign.cs" />
     <Compile Include="Steering\Align.cs" />
     <Compile Include="Steering\Arrive.cs" />
+    <Compile Include="Steering\CollisionAvoidance.cs" />
     <Compile Include="Steering\Evade.cs" />
     <Compile Include="Steering\Face.cs" />
     <Compile Include="Steering\Flee.cs" />
