--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Steering\Arrive.cs" />
     <Compile Include="Steering\CollisionAvoidance.cs" />
     <Compile Include="Steering\CollisionAvoidanceRT.cs" />
+    <Compile Include="Steering\CollisionDetector.cs" />
     <Compile Include="Steering\Evade.cs" />
     <Compile Include="Steering\Face.cs" />
     <Compile Include="Steering\Flee.cs" />
@@ -76,7 +77,9 @@
     <Compile Include="Steering\SteeringBehavior.cs" />
     <Compile Include="SteeringVelocidad\Wander.cs" />
     <Compile Include="Steering\VelocityMatching.cs" />
+    <Compile Include="Steering\WallAvoidance.cs" />
     <Compile Include="Steering\Wander.cs" />
+    <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources.weproj" />
