Cambio de espacio de nombres

--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -63,26 +63,26 @@
     <Compile Include="SteeringVelocidad\Seek.cs" />
     <Compile Include="SteeringVelocidad\Steering.cs" />
     <Compile Include="SteeringVelocidad\SteeringBehavior.cs" />
-    <Compile Include="Steering\AntiAlign.cs" />
-    <Compile Include="Steering\Align.cs" />
-    <Compile Include="Steering\Arrive.cs" />
-    <Compile Include="Steering\CollisionAvoidance.cs" />
-    <Compile Include="Steering\CollisionAvoidanceRT.cs" />
-    <Compile Include="Steering\CollisionDetector.cs" />
-    <Compile Include="Steering\Evade.cs" />
-    <Compile Include="Steering\Face.cs" />
-    <Compile Include="Steering\Flee.cs" />
-    <Compile Include="Steering\LookWhereYouGoing.cs" />
-    <Compile Include="Steering\Persue.cs" />
-    <Compile Include="Steering\PredictivePathFollowing.cs" />
-    <Compile Include="Steering\Seek.cs" />
-    <Compile Include="Steering\Separation.cs" />
-    <Compile Include="Steering\Steering.cs" />
-    <Compile Include="Steering\SteeringBehavior.cs" />
+    <Compile Include="Steerings\AntiAlign.cs" />
+    <Compile Include="Steerings\Align.cs" />
+    <Compile Include="Steerings\Arrive.cs" />
+    <Compile Include="Steerings\CollisionAvoidance.cs" />
+    <Compile Include="Steerings\CollisionAvoidanceRT.cs" />
+    <Compile Include="Steerings\CollisionDetector.cs" />
+    <Compile Include="Steerings\Evade.cs" />
+    <Compile Include="Steerings\Face.cs" />
+    <Compile Include="Steerings\Flee.cs" />
+    <Compile Include="Steerings\LookWhereYouGoing.cs" />
+    <Compile Include="Steerings\Persue.cs" />
+    <Compile Include="Steerings\PredictivePathFollowing.cs" />
+    <Compile Include="Steerings\Seek.cs" />
+    <Compile Include="Steerings\Separation.cs" />
+    <Compile Include="Steerings\Steering.cs" />
+    <Compile Include="SteeringBehavior.cs" />
     <Compile Include="SteeringVelocidad\Wander.cs" />
-    <Compile Include="Steering\VelocityMatching.cs" />
-    <Compile Include="Steering\WallAvoidance.cs" />
-    <Compile Include="Steering\Wander.cs" />
+    <Compile Include="Steerings\VelocityMatching.cs" />
+    <Compile Include="Steerings\WallAvoidance.cs" />
+    <Compile Include="Steerings\Wander.cs" />
     <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
