Estructura final del codigo

--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -53,39 +53,38 @@
     <Compile Include="Kinematic.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Path.cs" />
-    <Compile Include="SteeringsCombinados\BlendedSteering.cs" />
-    <Compile Include="SteeringsCombinados\PrioritySteering.cs" />
-    <Compile Include="SteeringsCombinados\SteeringsFactory.cs" />
+    <Compile Include="Steerings\Combined\BlendedSteering.cs" />
+    <Compile Include="Steerings\Combined\PrioritySteering.cs" />
+    <Compile Include="Steerings\Combined\SteeringsFactory.cs" />
     <Compile Include="Steerings\Alignment.cs" />
     <Compile Include="Steerings\Cohesion.cs" />
-    <Compile Include="SteeringVelocidad\Arrive.cs" />
+    <Compile Include="Steerings\Velocity\Arrive.cs" />
     <Compile Include="DebugLines.cs" />
-    <Compile Include="SteeringVelocidad\Flee.cs" />
+    <Compile Include="Steerings\Velocity\Flee.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="MyScene.cs" />
-    <Compile Include="InfoDebug.cs" />
-    <Compile Include="SteeringVelocidad\Seek.cs" />
-    <Compile Include="SteeringVelocidad\Steering.cs" />
-    <Compile Include="SteeringVelocidad\SteeringBehavior.cs" />
+    <Compile Include="Steerings\Velocity\Seek.cs" />
+    <Compile Include="Steerings\Velocity\Steering.cs" />
+    <Compile Include="Steerings\Velocity\SteeringBehavior.cs" />
     <Compile Include="Steerings\AntiAlign.cs" />
     <Compile Include="Steerings\Align.cs" />
     <Compile Include="Steerings\Arrive.cs" />
-    <Compile Include="Steerings\CollisionAvoidance.cs" />
-    <Compile Include="Steerings\CollisionAvoidanceRT.cs" />
-    <Compile Include="Steerings\CollisionDetector.cs" />
-    <Compile Include="Steerings\Evade.cs" />
-    <Compile Include="Steerings\Face.cs" />
+    <Compile Include="Steerings\Delegates\CollisionAvoidance.cs" />
+    <Compile Include="Steerings\Delegates\CollisionAvoidanceRT.cs" />
+    <Compile Include="Steerings\Delegates\CollisionDetector.cs" />
+    <Compile Include="Steerings\Delegates\Evade.cs" />
+    <Compile Include="Steerings\Delegates\Face.cs" />
     <Compile Include="Steerings\Flee.cs" />
-    <Compile Include="Steerings\LookWhereYouGoing.cs" />
-    <Compile Include="Steerings\Persue.cs" />
-    <Compile Include="Steerings\PredictivePathFollowing.cs" />
+    <Compile Include="Steerings\Delegates\LookWhereYouGoing.cs" />
+    <Compile Include="Steerings\Delegates\Persue.cs" />
+    <Compile Include="Steerings\Delegates\PredictivePathFollowing.cs" />
     <Compile Include="Steerings\Seek.cs" />
     <Compile Include="Steerings\Separation.cs" />
     <Compile Include="Steerings\Steering.cs" />
-    <Compile Include="SteeringVelocidad\Wander.cs" />
+    <Compile Include="Steerings\Velocity\Wander.cs" />
     <Compile Include="Steerings\VelocityMatching.cs" />
-    <Compile Include="Steerings\WallAvoidance.cs" />
-    <Compile Include="Steerings\Wander.cs" />
+    <Compile Include="Steerings\Delegates\WallAvoidance.cs" />
+    <Compile Include="Steerings\Delegates\Wander.cs" />
     <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
