--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -56,7 +56,9 @@
     <Compile Include="Steerings\Combined\BlendedSteering.cs" />
     <Compile Include="Steerings\Combined\PrioritySteering.cs" />
     <Compile Include="Steerings\Combined\SteeringsFactory.cs" />
+    <Compile Include="Steerings\Coordinated\DefensiveCirclePattern.cs" />
     <Compile Include="Steerings\Coordinated\FormationManager.cs" />
+    <Compile Include="Steerings\Coordinated\Pattern.cs" />
     <Compile Include="Steerings\Group\Alignment.cs" />
     <Compile Include="Steerings\Group\Cohesion.cs" />
     <Compile Include="Steerings\Velocity\Arrive.cs" />
