--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -33,6 +33,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System.Drawing" />
     <Reference Include="WaveEngine.Common" />
     <Reference Include="WaveEngine.Framework" />
     <Reference Include="WaveEngine.Components" />
@@ -61,6 +62,7 @@
     <Compile Include="Extensiones.cs" />
     <Compile Include="GameController.cs" />
     <Compile Include="ICharacterInfo.cs" />
+    <Compile Include="InfluenceMap.cs" />
     <Compile Include="Kinematic.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Obstacle.cs" />
