--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DecisionManager\ActionCombination.cs" />
     <Compile Include="DecisionManager\ActionManager.cs" />
     <Compile Include="DecisionManager\ActionSequence.cs" />
+    <Compile Include="EntityFactory.cs" />
     <Compile Include="Extensiones.cs" />
     <Compile Include="GameController.cs" />
     <Compile Include="ICharacterInfo.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Obstacle.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="PlayableCharacter.cs" />
+    <Compile Include="Shoot.cs" />
     <Compile Include="Steerings\Combined\BlendedSteering.cs" />
     <Compile Include="Steerings\Combined\PrioritySteering.cs" />
     <Compile Include="Steerings\Combined\SteeringsFactory.cs" />
