--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -49,7 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraController.cs" />
-    <Compile Include="CharacterNPC.cs" />
+    <Compile Include="Characters\CharacterNPC.cs" />
+    <Compile Include="Characters\SteeringCharacter.cs" />
     <Compile Include="CharacterTypes\CharacterType.cs" />
     <Compile Include="CharacterTypes\ExplorerCharacter.cs" />
     <Compile Include="CharacterTypes\FormationType.cs" />
@@ -61,14 +62,15 @@
     <Compile Include="DecisionManager\ActionSequence.cs" />
     <Compile Include="EntityFactory.cs" />
     <Compile Include="Extensiones.cs" />
+    <Compile Include="FlockingScene.cs" />
     <Compile Include="GameController.cs" />
-    <Compile Include="ICharacterInfo.cs" />
+    <Compile Include="Characters\ICharacterInfo.cs" />
     <Compile Include="InfluenceMap.cs" />
     <Compile Include="Kinematic.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Path.cs" />
-    <Compile Include="PlayableCharacter.cs" />
+    <Compile Include="Characters\PlayableCharacter.cs" />
     <Compile Include="Shoot.cs" />
     <Compile Include="Steerings\Combined\BlendedSteering.cs" />
     <Compile Include="Steerings\Combined\PrioritySteering.cs" />
@@ -85,7 +87,7 @@
     <Compile Include="DebugLines.cs" />
     <Compile Include="Steerings\Velocity\Flee.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="MyScene.cs" />
+    <Compile Include="MainScene.cs" />
     <Compile Include="Steerings\Velocity\Seek.cs" />
     <Compile Include="Steerings\Velocity\Steering.cs" />
     <Compile Include="Steerings\Velocity\SteeringBehavior.cs" />
