--- a/Wave/WaveProject/WaveProject.csproj
+++ b/Wave/WaveProject/WaveProject.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DecisionManager\ActionSequence.cs" />
     <Compile Include="EntityFactory.cs" />
     <Compile Include="Extensiones.cs" />
+    <Compile Include="FlockingController.cs" />
     <Compile Include="FlockingScene.cs" />
     <Compile Include="GameController.cs" />
     <Compile Include="Characters\ICharacterInfo.cs" />
